package com.accesscontrol.model;

/**
 * Represents actions that can be performed on resources.
 * Simplified to 4 core actions for clarity.
 */
public enum Action {
    READ,
    WRITE,
    DELETE,
    EXECUTE
}